# rosmaster

./: .gitignore  README.md
dep/: setup.sh  unlock_network.sh
install/: local_setup.sh  setup.sh
install/drive_controls/lib/drive_controls/: drive  driveTest
install/drive_controls/share/drive_controls/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drive_controls/share/drive_controls/config/: params.yaml
install/drive_controls/share/drive_controls/launch/: drive_controls.launch.py
install/rosmaster/share/ament_index/resource_index/package_run_dependencies/: rosmaster
install/rosmaster/share/ament_index/resource_index/parent_prefix_path/: rosmaster
install/rosmaster/share/rosmaster/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rosmaster/share/rosmaster/cmake/: rosmasterConfig-version.cmake  rosmasterConfig.cmake
install/rosmaster/share/rosmaster/config/: gazebo_params.yaml  mecanum_controllers.yaml  my_controllers.yaml  twist_mux.yaml
install/rosmaster/share/rosmaster/description/: inertial_macros.xacro  robot.urdf.xacro  ros2_control.xacro  rosmaster.urdf.xacro  rosmaster_core.xacro
install/rosmaster/share/rosmaster/environment/: ament_prefix_path.dsv  path.dsv
install/rosmaster/share/rosmaster/launch/: launch_robot.launch.py  launch_sim.launch.py  mecanum_control.launch.py  rsp.launch.py
install/rosmaster/share/rosmaster/worlds/: empty.world
install/rosmaster_driver/share/rosmaster_driver/: package.bash  package.zsh
install/rosmaster_driver_diff/include/diffdrive_rosmaster/rosmaster_driver_diff/: diffbot_system.hpp  rosmaster.hpp  rosmaster_controller.hpp  visibility_control.h  wheel.hpp
install/rosmaster_driver_diff/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: rosmaster_driver_diff
install/rosmaster_driver_diff/share/ament_index/resource_index/package_run_dependencies/: rosmaster_driver_diff
install/rosmaster_driver_diff/share/ament_index/resource_index/parent_prefix_path/: rosmaster_driver_diff
install/rosmaster_driver_diff/share/rosmaster_driver_diff/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  robot_hardware.xml
install/rosmaster_driver_diff/share/rosmaster_driver_diff/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_diffdrive_rosmasterExport.cmake  rosmaster_driver_diffConfig-version.cmake  rosmaster_driver_diffConfig.cmake
install/rosmaster_driver_diff/share/rosmaster_driver_diff/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
log/: latest_build
ros2_tools/: README.md  buildNode.py  createPackage.bat  createPackage.sh  install_ros.sh
ros2_tools/files/: gazebo_params.yaml  launch_sim.launch.py  my_controllers.yaml  ros2_control.xacro  rsp.launch.py  setup.sh
ros2_tools/install/: install_ros_packages.sh
src/drive_controls/: package.xml  setup.cfg  setup.py
src/drive_controls/config/: params.yaml
src/drive_controls/drive_controls/: drive.py  test.py
src/drive_controls/drive_controls/mqtt/: MQTT.py
src/drive_controls/launch/: drive_controls.launch.py
src/rosmaster/: CMakeLists.txt  package.xml
src/rosmaster/config/: mecanum_controllers.yaml  my_controllers.yaml  twist_mux.yaml
src/rosmaster/description/: robot.urdf.xacro  ros2_control.xacro  rosmaster.urdf.xacro  rosmaster_core.xacro
src/rosmaster/launch/: launch_robot.launch.py  launch_sim.launch.py  mecanum_control.launch.py  rsp.launch.py
src/rosmaster_driver/: CMakeLists.txt  mecanum_hardware.xml  package.xml
src/rosmaster_driver/config/: params.yaml
src/rosmaster_driver/include/rosmaster_driver/: controller.hpp  mecanum_hardware.hpp  rosmaster.hpp
src/rosmaster_driver/launch/: rosmaster_driver.launch.py
src/rosmaster_driver/src/: mecanum_hardware.cpp  pluginlib_export.cpp
src/rosmaster_driver_diff/: CMakeLists.txt  robot_hardware.xml
src/rosmaster_driver_diff/config/: params.yaml
src/rosmaster_driver_diff/include/rosmaster_driver_diff/: diffbot_system.hpp  rosmaster.hpp  rosmaster_controller.hpp  visibility_control.h  wheel.hpp
src/rosmaster_driver_diff/launch/: rosmaster_driver_diff.launch.py
src/rosmaster_driver_diff/motor_test/: measure_enc.py  send_once  send_once.cpp
src/rosmaster_driver_diff/src/: diffbot_system.cpp
systemctl/services/robot/: launch_robot.service
