<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosmaster_driver</name>
  <version>0.0.0</version>
  <description>mecanum hardware interface for ros2_control (Humble)</description>
  <maintainer email="coreyleydig@gmail.com">raspberrypi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
